--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: contact@alessiamilo.com
 description: > # this means to ignore newlines until "baseurl:"
   amilo interactive sketches
 baseurl: "/interact" # the subpath of your site, e.g. /blog
-url: "https://interact.hithub.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://interact.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: alesmilo
 github_username:  amilo
 
