--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: an interactive portfolio for p5.js projects
+title: portfolio
 email: contact@alessiamilo.com
 description: > # this means to ignore newlines until "baseurl:"
   amilo interactive sketches
